Ensure list marker alignment is enforced with !important for consistent styling

--- a/formal.css
+++ b/formal.css
@@ -58,7 +58,7 @@ ol, ul {
   padding-left: 2em;
   li::marker {
     font-weight: bold;
-    text-align: left;
+    text-align: left !important;
   }
 }
 
