--- a/markdown-preview-enhanced.less
+++ b/markdown-preview-enhanced.less
@@ -58,7 +58,7 @@
     padding-left: 2em;
     li::marker {
       font-weight: bold;
-      text-align: left;
+      text-align: left !important;
     }
   }
 
